Updates to Picard CreateReferenceDictionary trial, still no successful completion...